# AS-traing

./: .clang-format  .clangd  .gitignore  README.md  build.bash  clean.bash
src/virtual_cam/: CMakeLists.txt  package.xml
weight/: CMakeLists.txt  onnx_infer.cpp
